--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ louis-sys = "0.3.0"
 lazy_static = "1.1.0"
 semver = "0.9.0"
 widestring = "0.4.0"
+log = "0.4.5"
+
+[dev-dependencies]
+pretty_env_logger = "0.2.4"
