--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ lazy_static = "1.1.0"
 semver = "0.9.0"
 widestring = "0.4.0"
 log = "0.4.5"
+
+[dev-dependencies]
+clap = "2.32.0"
+pretty_env_logger = "0.2.4"
