--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ lazy_static = "1.1.0"
 clap = "2.32.0"
 pretty_env_logger = "0.2.4"
 assert_cmd = "0.10.1"
+
+[badges]
+travis-ci = { repository = "whentze/liblouis-rust" }
