try explicit apt-get update in ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,8 @@ stages:
   - build
 
 before_script:
-  - apt install liblouis-dev
+  - apt-get update -y
+  - apt-get -y install liblouis-dev
 
 rust-stable:
   stage: build
