--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "louis"
-version = "0.2.0"
+version = "0.5.0"
 authors = ["muvlon <muvlon@hentzes.de>"]
 description = "Rusty Bindings to liblouis"
 repository = "https://github.com/whentze/liblouis-rust"
@@ -8,8 +8,13 @@ categories = ["api-bindings", "text-processing", "localization", "encoding"]
 readme = "README.md"
 license = "GPL-3.0"
 
+[workspace]
+members = [
+    "louis-sys",
+]
+
 [dependencies]
-louis-sys = "0.4.0"
+louis-sys = { path = "louis-sys" }
 semver = "0.9.0"
 widestring = "0.4.0"
 log = "0.4.5"
