--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ members = [
 ]
 
 [dependencies]
-louis-sys = { path = "louis-sys" }
+louis-sys = { path = "louis-sys", version = "0.5.0" }
 semver = "0.9.0"
 widestring = "0.4.0"
 log = "0.4.5"
