--- a/louis-sys/Cargo.toml
+++ b/louis-sys/Cargo.toml
@@ -13,6 +13,9 @@ links = "louis"
 
 [build-dependencies]
 bindgen = "0.37.4"
+pkg-config = "0.3.14"
+autotools = "0.1.2"
+log = "0.4.5"
 
 [dev-dependencies]
 semver-parser = "0.9.0"
