--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://github.com/whentze/liblouis-rust"
 categories = ["api-bindings", "text-processing", "localization", "encoding"]
 readme = "README.md"
 license = "GPL-3.0"
+keywords = ["braille", "accessibility", "translation"]
 
 [workspace]
 members = [
