--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ members = [
     "louis-sys",
 ]
 
+[badges]
+gitlab = { repository = "https://gitlab.com/whentze/liblouis-rust" }
+
 [dependencies]
 louis-sys = { path = "louis-sys", version = "0.6.0" }
 semver = "0.9.0"
